# habitual_trends

./: # .env.example - Copy this to.md  .dockerignore  .gitignore  .reflexignore  App-abitual Trends.tsx  Cargo.toml  Dockerfile  README.md  Visual Code Project - Habitual Trends..final.code-workspace  app.py  backend.py  check_models.py  config.yaml  data.db  debug_workspace.py  deploy.sh  docker-compose.yml  fly.toml  fly.toml.bak  frontend.py  habit_app.py  habitual_trend.py  index.html  logger.py  main.py  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  rxconfig.py  test_api.py  test_final_fixed.py  test_gemini_final.py  test_gemini_new.py  test_insight_gemini.py  test_insight_generation.py  test_opik_only.py  verify_ai.py
.streamlit/: config.toml
.web/: env.json  package.json  reflex.install_frontend_packages.cached  reflex.json
.web/app/: root.jsx
.web/app/routes/: _index.jsx
.web/utils/: context.js
Habitual Trends (Python)/: Habitual Trends py files sample..130126.py  Habitual trends initialization script.py
Habitual Trends files/: Prompt code JSON for Habitual Trends
ai-services/ai-services/: main.py  requirements.txt  tools.py
components/: GroundingTools.tsx
habitual-trends/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Visual Code Project - Habitual Trends.code-workspace  fly.toml  package.json  requirements.txt  rxconfig.py  types.ts
habitual-trends/.streamlit/: secrets.toml
habitual-trends/components/: ChatBot.tsx  Header.tsx  ImageLab.tsx  WellnessDashboard.tsx
habitual-trends/habitual_trends/: .gitignore  habitual_trends.py  requirements.txt
habitual-trends/migrations/: 20260123122646_init_habitual_trends.sql
habitual-trends/my_app/: .gitignore  requirements.txt
habitual-trends/my_app/my_app/: __init__.py
habitual-trends/rust-backend/: Cargo.toml
habitual-trends/rust-backend/src/: main.rs
habitual-trends/services/: geminiService.ts
habitual-trends/src/: main.rs
habitual_backend/: habitual_backend.py
habitual_trends/: .gitignore  Cargo.toml  __init__.py  backend.py  habitual_trends.py  requirements.txt  rxconfig.py
habitual_trends/assets/: logo.py
habitual_trends/habitual_trends/: __init__.py  habitual_trends.py  requirements.txt
habitual_trends/habitual_trends/habitual_trends/: habitual_trends.py
habitual_trends/src/: client.py  habit_input.py  main.rs
my_app/: rxconfig.py
my_app/my_app/: habitual_trends.py
rust-backend/: .gitignore
rust-backend/src/: main.rs
src/: main (2).rs  main.rs
