[package]
name = "habitual_trends"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web Framework & Async Runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Middleware (CORS, Compression, etc.)
tower-http = { version = "0.5", features = ["cors"] }

# Logging & Observability
env_logger = "0.11"
log = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
