[package]
name = "habitual-trends-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
# Added "chrono" feature here
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
log = "0.4"
env_logger = "0.11"
http = "1.0"
# Added chrono for better date handling
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
